<resources>
    <string name="app_name">Fine Stay</string>


    <string name="mobile">Enter the contact number</string>
    <string name="lang">Enter the prefered language</string>

    <string name="delete_account">DELETE ACCOUNT</string>
    <string name="update_account">UPDATE ACCOUNT</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="login_page">LOGIN PAGE</string>
    <string name="enter_your_e_mail">Enter your E-mail</string>
    <string name="enter_the_password">Enter the password</string>
    <string name="don_t_have_an_account_yet">Don\'t have an account yet ?</string>



    <string name="addr_review">Add Review</string>
    <string name="add_back">Back</string>
    <string name="add_guestreviews">Guest Reviews</string>
    <string name="add_your_name">Your Name</string>
    <string name="add_your_feedback">Type your Feedback</string>
    <string name="add_cancel">Cancel</string>
    <string name="add_submit">Submit</string>
    <string name="add_cus_name1">Customer\'s Name</string>
    <string name="add_cus_name2">Customer\'s Name</string>
    <string name="add_cus_name3">Customer\'s Name</string>
    <string name="add_cus_review1">Customer\'s Review</string>
    <string name="add_cus_review2">Customer\'s Review</string>
    <string name="add_cus_review3">Customer\'s Review</string>
    <string name="admin_cus_name">Customer\'s Name</string>
    <string name="admin_cus_feedback">Customer\'s Feedback</string>
    <string name="admin_cancel">Cancel</string>
    <string name="admin_submit">Submit</string>
    <string name="admin_response1">Response</string>
    <string name="admin_response2">Response</string>
    <string name="admin_response3">Response</string>
    <string name="admin_back">Back</string>
    <string name="type_response">Type Your Response</string>


    <string name="PLATINUM_PACKAGE1">GRADE(A)</string>
    <string name="PLATINUM_PACKAGE2">GRADE(B)</string>
    <string name="PLATINUM_PACKAGE3">GRADE(C)</string>
    <string name="PLATINUM_PACKAGE">PLATINUM PACKAGE</string>
    <string name="GOLD_PACKAGE">GOLD PACKAGE</string>
    <string name="SILVER_PACKAGE">SILVER PACKAGE</string>
    <string name="Management">PACKAGE MANAGEMENT</string>
    <string name="PACKAGE_NAME">PACKAGE_NAME:</string>
    <string name="NO_OF_GUESTS">NO OF ADULTS:</string>
    <string name="NO_OF_ROOMS">NO OF ROOMS:</string>
    <string name="NO_OF_BATHS">NO OF BATHS:</string>
    <string name="EST_VALUE">EST.VALUE:   Rs.</string>
    <string name="NEXT">NEXT</string>
    <string name="pic3">pic3</string>
    <string name="pic2">pic2</string>
    <string name="pic1">pic1</string>
    <string name="no1">4</string>
    <string name="no2">3</string>
    <string name="no3">2</string>
    <string name="No1">15,000.00</string>
    <string name="No2">12,000.00</string>
    <string name="No3">10,000.00</string>
    <string name="r1">RESERVE1</string>
    <string name="r2">RESERVE2</string>
    <string name="r3">RESERVE3</string>

    <string name="a2">VIEW</string>
    <string name="a3">UPDATE</string>
    <string name="a4">DELETE</string>
    <string name="a5">BACK</string>

    <string name="account">RESERVATIONS</string>
    <string name="NO_OF_Children">NO OF CHILDREN:</string>


    <string name="accept">Accept</string>
    <string name="CheckInMsg">Check In</string>
    <string name="CheckOutMsg">Check Out</string>
    <string name="pick_date_in">Check In Date</string>
    <string name="pick_date_out">Check Out Date</string>
    <string name="no_of_guests">Number of Guests</string>
    <string name="enter_no_of_guests">Enter Number of Guests</string>
    <string name="Reserve_meals_bool">First Day Reserve Meals</string>
    <string name="Reserve">Reserve</string>
    <string name="Estimate_Price">Estimate Price</string>
    <string name="Conform_reserve_view">Fee and TAX Details</string>
    <string name="Estimate_price">Estimate price</string>
    <string name="no_of_nights">X No nights</string>
    <string name="value_x">X</string>
    <string name="serveice_fee_msg">Service fee</string>
    <string name="total_msg">Total(LKR)</string>
    <string name="lkr_50">600.00</string>
    <string name="lkr_total_amount_sample">2000.00</string>
    <string name="sample_nights_amount">1400 x 2</string>
    <string name="table_column_customer_id">Customer ID</string>
    <string name="approve_key">Approve</string>
    <string name="deny_key">Deny</string>
    <string name="Reservation_Manage">Manage Reservation</string>
    <string name="type_your_feedback">Type your feedback</string>
    <string name="todo">TODO</string>
    <string name="customer_s_review">Customer\'s review</string>
    <string name="selectPackage">Select Package</string>
    <string name="textViewCustomerID">Customer ID</string>
    <string name="textViewCheckInDate">Check In Date</string>
    <string name="textViewCheckOut">Check Out Date</string>
    <string name="textViewMeals">Meals</string>
    <string name="textViewTotal">Total</string>
    <string name="textViewStatus">Status</string>
    <string name="textViewNoOfGuests">No of Guests</string>
    <string-array name="package_array">
        <item>Platinum</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Bronze</item>
    </string-array>


<!--  - - - - - - -  - - - - - -  - - -->

    <string name="register">Register</string>
    <string name="enter_fName">enter_fName</string>
    <string name="fName">fName</string>
    <string name="registration">registration</string>
    <string name="ln">Last Name</string>
    <string name="fn">First Name</string>
    <string name="em">Email</string>
    <string name="co">Country</string>
    <string name="mn">Mobile Number</string>
    <string name="pw">Password</string>
    <string name="fname">Enter the First Name</string>
    <string name="lname">Enter the last name</string>
    <string name="email">User E-mail</string>
    <string name="country">Enter the country</string>
    <string name="mnumber">Enter Mobile Number</string>
    <string name="password">Enter a Password</string>
    <string name="reg">REGISTRATION</string>
    <string name="login">login</string>
    <string name="profile">profile</string>
    <string name="meals">Meal menu</string>
    <string name="addmeal">Add Meals</string>
    <string name="delete">DELETE ACCOUNT</string>
    <string name="update">UPDATE ACCOUNT</string>
    <string name="signout">SIGN OUT</string>
    <string name="loginpage">LOGIN PAGE</string>
    <string name="user_email">Enter the Email</string>
    <string name="enter_email">Enter your Email</string>
    <string name="enter_pwd">Enter the password</string>
    <string name="user_password">Enter the password</string>
    <string name="havenotaccount">Don\'t have an account yet?</string>
    <string name="REGISTRATION_REDIRECT">REGISTER NOW</string>
    <string name="meal">AVAILABLE MEALS</string>
    <string name="breakfast">BREAKFAST MENU</string>
    <string name="lunch">LUNCH MENU</string>
    <string name="skipmeals">Skip Meals</string>
    <string name="meal_add">ADDING MEALS</string>
    <string name="meal4breakfast">MEALS FOR BREAKFAST</string>
    <string name="meal4lunch">MEALS FOR LUNCH</string>
    <string name="br_meal_name">Meal Name</string>
    <string name="br_meal_description">Meal description with includings</string>
    <string name="add_breakfast">ADD MEALS FOR BREAKFAST</string>
    <string name="ln_meal_name">Meal Name</string>
    <string name="ln_meal_description">Meal description with includings</string>
    <string name="add_lunch">ADD MEALS FOR LUNCH</string>
    <string name="edit">EDIT ADDED MEALS</string>
    <string name="meal_edit">EDIT MEALS</string>
    <string name="update_bmeal">UPDATE BREAKFAST MEAL</string>
    <string name="update_lmeal">UPDATE LUNCH MEAL</string>
    <string name="delete_bmeal">DELETE MEAL</string>
    <string name="delete_lmeal">DELETE</string>

    <string name="appetizers">APPETIZERS</string>
    <string name="rice">RICE</string>
    <string name="noodles">NOODLES</string>
    <string name="drinks">BEVERAGES</string>

    <string name="eacha">LKR + tax</string>
    <string name="eachb">Buy3 , Free1</string>
    <string name="eachc">LKR + tax</string>
    <string name="eachd">Buy3 , Free1</string>

    <string name="aprice">Price / description</string>
    <string name="bprice">Price / description</string>
    <string name="cprice">Price / description</string>
    <string name="dprice">Price / description</string>
    <string name="a1">Appetizer name</string>

    <string name="b1">Rice Name</string>

    <string name="c1">Noodle Meal</string>
    <string name="d1">Beverage Meal</string>

    <string name="editdeletemeal">Edit/Delete added meals</string>
    <string name="list">list</string>
    <string name="showlist">showlist</string>
    <string name="addappetizer">Add Appetizer</string>
    <string name="addrice">Add Rice Meal</string>
    <string name="addnoodles">Add Noodle Meal</string>
    <string name="adddrink">Add Beverages</string>
    <string name="app">list appertizer</string>
    <string name="showbr">Show</string>
    <string name="showa">Show</string>
    <string name="showb">Show</string>
    <string name="showc">Show</string>
    <string name="showd">Show</string>
    <string name="upa">Update</string>
    <string name="upb">Update</string>
    <string name="upc">Update</string>
    <string name="upd">Update</string>
    <string name="deletea">Delete</string>
    <string name="deleteb">Delete</string>
    <string name="deletec">Delete</string>
    <string name="deleted">Delete</string>
    <string name="viewaddings">View Added Meals</string>
    <string name="updatethis">EDIT / DELETE MEALS</string>
    <string name="confirmpwd">Re-Enter password</string>
    <string name="cpwd">Enter Password again</string>
    <string name="addmeals">ADD MEALS</string>
    <string name="udatemeals">UPDATE MEALS</string>
    <string name="addedmeals">ADDED MEALS</string>
    <string name="admin">ADMIN</string>
    <string name="customer">CUSTOMER</string>
    <string name="title_activity_admin_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="adminlogin">ADMIN LOGIN</string>
    <string name="propertyXXX">Property</string>
    <string name="Addxxx">Add</string>


<!--    - - - - - - - - - -  -  -->

    <string name="uname">User Name</string>
    <string name="guestreviews">Guest Reviews</string>


    <string name="feedback">Feedback</string>
    <string name="usname">Customer\'s Name</string>
    <string name="usfeedback">Customer\'s Feedback</string>
    <string name="feedbackbtn">Feedback</string>
    <string name="feedbackasd">Admin Feedback</string>
    <string name="adminProp">Reservation Manager</string>
</resources>
